changes font nav overlays, issues with nav on small screen?

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,9 +12,20 @@ body {
 	background-size: cover;
 }
 
-h2 {
-	font-family: "bite-the-bullet";
-	font-size: 50px;
+
+h1, h2 {
+	font-family: "Shadows Into Light";
+	font-size: 40px;
+	color: #ff8533;
+}
+
+p {
+	font-family: "Neucha";
+	color: #008080;
+}
+
+a {
+	font-family: "Shadows Into Light Two";
 	color: #ff8533;
 }
 
@@ -25,9 +36,12 @@ h2 {
 /* nav style */
 
 .navbar {
-	margin-top: 45px;
 	background: linear-gradient(to right, rgba(0,204,204, 0.4), rgba(0,128,128, 1)); 
 	border-bottom: none;
+}
+
+.navMargin {
+	margin-top: 45px;
 }
 
 @media (max-width: 600px) {
@@ -36,15 +50,10 @@ h2 {
 	}
 }
 
-.navbar-default .navbar-header a {
-	color: #ff8533;
-}
-
 .navbar-default .navbar-nav li a {
 	color: #ff8233;
-	font-family: "bite-the-bullet";
 	font-weight: bold;
-	font-size: 25px;
+	font-size: 20px;
 }
 
 .navbar-default .navbar-nav li a:hover, 
@@ -164,6 +173,14 @@ h2 {
 	}
 }
 
+.qualificationText {
+	width: 100%;
+	height: auto;
+	margin-bottom: 5%;
+	font-family: "bite-the-bullet";
+	font-size: 20px;
+}
+
 
 /* service */
 
@@ -181,6 +198,21 @@ h2 {
 	color: #008080;
 	font-weight: bolder;
 	font-size: 28px;
+}
+
+.topArrow {
+	width:50px;
+	height: 50px;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 45px;
+	text-align: center;
+	padding-top: 20px;
+}
+
+.topArrow p {
+	font-size: 10px;
+	line-height: 12px;
 }
 
 /* service hover */
@@ -274,11 +306,19 @@ h2 {
 	font-weight: bold;
 }
 
+.serviceImage i {
+	position: absolute;
+	top: 50px;
+	left: 50px;
+	padding: 5px;
+	font-size: 30px;
+}
+
 
 /* carousel */
 
 #caroID {
-	margin-top: 5%;
+	margin-top: 2%;
 	margin-bottom: 5%;
 
 }
@@ -398,7 +438,6 @@ h2 {
 	
 	max-width:300px;
 	border:2px solid #008080;
-	
 }
 
 .blogItem { 
@@ -406,11 +445,9 @@ h2 {
 	padding-top: 10px;
 	display: inline-block;
 	width: 100%;
-
 }
 
 .blogItem .blogHeader {
-	font-family: "Roboto", sans-serif;
 	font-size: 28px;
 	text-align: left;
 }
@@ -418,19 +455,14 @@ h2 {
 .blogItem .blogDate {
 	font-style: italic;
 	color: #008080;
-	font-size: 16px;
-}
-
-.blogItem p {
-	font-family: "Roboto",sans-serif;
-	color: #008080;
-
+	font-size: 12px;
+	font-weight: lighter;
 }
 
 /* contact */
 
 .contactMargin {
-	margin-top: 10%;
+	margin-top: 7%;
 }
 
 .form-margin {
@@ -589,6 +621,38 @@ h2 {
   transform: translate3d(0,0,0);
   opacity: 1;
   filter: alpha(opacity=100);
+}
+
+.hovereffect:hover h2 {
+	display: none;
+}
+
+@media (max-width: 990px) {
+	.hovereffect hr:nth-child(3) {
+	  opacity: 1;
+	  filter: alpha(opacity=100);
+	  -webkit-transform: translate3d(-50%,-50%,0) rotate3d(0,0,1,-90deg) scale3d(1,1,1);
+	  transform: translate3d(-50%,-50%,0) rotate3d(0,0,1,-90deg) scale3d(1,1,1);
+	}
+
+	.hovereffect hr:nth-child(4) {
+	  opacity: 1;
+	  filter: alpha(opacity=100);
+	  -webkit-transform: translate3d(-50%,-50%,0) rotate3d(0,0,1,-180deg) scale3d(1,1,1);
+	  transform: translate3d(-50%,-50%,0) rotate3d(0,0,1,-180deg) scale3d(1,1,1);
+	}
+
+	.hovereffect .set1 i:empty, .hovereffect .set2 i:empty {
+	  -webkit-transform: translate3d(0,0,0);
+	  transform: translate3d(0,0,0);
+	  opacity: 1;
+	  filter: alpha(opacity=100);
+	}
+
+	.hovereffect h2 {
+		display: none;
+	}
+
 }
 
 /* footer */
